k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
        - name: app
          image: localhost:5001/devops-app:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
