k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops
spec:
  selector:
    app: devops-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
